YATC 0.7.4:
  post-install.sh:
    1. Fixing pulse setup.

YATC 0.7.3:
  post-install.sh:
    1. More requirements for pulseaudio added.
    2. Pulseaudio access groups membership for user added.
    3. pulseaudio daemon now start at "user" session.
    4. Unmuting alsa Master and PCM + pulseaudio device with index "0".

YATC 0.7.2:
  post-install.sh:
    1. Fixed user group from sound to audio.


YATC 0.7.1:
  yatc.py:
    1. Alsa replaced by pulseaudio.
    
  post-install.sh:
    1. Alsa removed from dependencies.
    2. libpulse-dev added to dependencies.


YATC 0.7.0:
  yatc.py:
    1. CDROM redirection added.

  post-install.sh:
    1. usbmount replaced by autofs.
    2. YATC_BRANCH variable added.
    3. Alsa added to dependencies.
    4. "user" added to sound group.


YATC 0.6.1:
  yatc.py:
    1. Sound forwarding option added.

  post-install.sh:
    1. "set -u -e" added. Few sed command lines fixed.