@@ -1,7 +1,7 @@
 #!/bin/bash
 # script to deploy YATC on Ubuntu 12.04 - 14.04 (netinstall with only ssh server installed)
 # (*w) author: nixargh <nixargh@gmail.com>
-VERSION="0.7.4"
+VERSION="0.7.5"
 ##### Settings ################################################################
 # !!! must be executed from root !!!
 RDPUSER="user"
@@ -72,7 +72,7 @@ echo -e "AllowGroups\tssh_users" >> $SSHD_CONF
 service ssh restart
 
 # Unmute alsa & pulseaudio
-amixer set PCM unmute
+amixer set PCM unmute || echo "Can't unmute PCM. Skipping..."
 amixer set Master unmute
 sudo -i -u $RDPUSER pulseaudio -D
 sleep 1
