@@ -1,3 +1,7 @@
+YATC 0.7.5:
+  post-install.sh:
+    1. Adding "or" to not stop if alsa doesn't have PCM device.
+
 YATC 0.7.4:
   post-install.sh:
     1. Fixing pulse setup.
